js/src/tests/test262/built-ins/Error/prototype/stack/instance-not-enumerable.js






















for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  assert.sameValue(
    Object.keys(err).indexOf('stack'),
    -1,
    Ctor.name + ': Object.keys does not include "stack"'
  );

  assert.sameValue(
    Object.getOwnPropertyNames(err).indexOf('stack'),
    -1,
    Ctor.name + ': getOwnPropertyNames does not include "stack"'
  );

  var sawStack = false;
  for (var key in err) {
    if (key === 'stack') {
      sawStack = true;
    }
  }
  assert.sameValue(sawStack, false, Ctor.name + ': for-in does not yield "stack"');

  assert.sameValue(
    Object.prototype.propertyIsEnumerable.call(err, 'stack'),
    false,
    Ctor.name + ': propertyIsEnumerable returns false'
  );

  assert.sameValue(
    Object.prototype.propertyIsEnumerable.call(Error.prototype, 'stack'),
    false,
    Ctor.name + ': Error.prototype.propertyIsEnumerable("stack") is false'
  );

  
  
  assert.sameValue(
    JSON.stringify(err),
    '{}',
    Ctor.name + ': JSON.stringify output is empty object'
  );

  
  
  var copy = Object.assign({}, err);
  assert.sameValue(
    Object.prototype.hasOwnProperty.call(copy, 'stack'),
    false,
    Ctor.name + ': Object.assign({}, err) does not copy "stack"'
  );
}

reportCompare(0, 0);
